
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package GUNIV3DAIUSDC2;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/GUNIV3DAIUSDC2";

message ProxyImplementationUpdated {
	google.protobuf.Timestamp ts = 1;
	bytes PreviousImplementation = 2;		//	address
	bytes NewImplementation = 3;		//	address
}

message ProxyAdminTransferred {
	google.protobuf.Timestamp ts = 1;
	bytes PreviousAdmin = 2;		//	address
	bytes NewAdmin = 3;		//	address
}
